# bot_govorilka

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  _test_sandbox.py  audio.py  avatar.py  config.py  docker-compose.yml  emotions.py  face_engine.py  llm.py  main.py  metrics.py  profiles.py  pyproject.toml  requirements.txt  stt.py  tools.py  tts.py  wake_word.py
tests/: conftest.py  test_core.py
