[project]
name = "bot-govorilka"
version = "0.1.0"
description = "Голосовой ассистент с Live2D аватаром, Whisper STT, Silero TTS и LLM"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    "faster-whisper>=1.0.0",
    "silero-vad>=0.1.0",
    "openai>=1.0.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "live2d-py>=3.0.0",
    "pygame>=2.5.0",
    "python-dotenv>=1.0.0",
    "num2words>=0.5.12",
    "openwakeword>=0.6.0",
    "duckduckgo-search>=5.0.0",
    "psutil>=5.9.0",
    "opencv-python>=4.8.0",
    "face-recognition>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
govorilka = "main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
